# umbrella_integration

./: README.md  format_input_data.py  pyproject.toml  umbrella_integration.py
example/: example_analysis_script.py
helpers/: plot_data.py
umbrella_integration/: format_input_data.py  ui.py
umbrella_integration/helpers/: plot_data.py
